# vibrant-tractography

./: .gitignore  CITATION.cff  Cargo.toml  README.md  index.html
src/: app.rs  (+2 more)
vibrant/: Cargo.toml
vibrant/data/: AF_left.tck  AF_right.tck  ATR_left.tck  ATR_right.tck  CST_left.tck  CST_right.tck  FPT_left.tck  FPT_right.tck
vibrant/src/: gpu.rs  lib.rs
vibrant/src/asset/: line.rs  mod.rs  texture.rs  utils.rs
vibrant/src/controller/: camera.rs  event.rs  light.rs  mod.rs  segment.rs  settings.rs  state.rs
vibrant/src/file/: bounds.rs  line.rs  mod.rs
vibrant/src/renderer/: environment.rs  mod.rs  ui.rs
vibrant/src/renderer/line/: mod.rs
vibrant/src/renderer/line/culling/: culling.wgsl  erode.wgsl  mipmap.wgsl  mod.rs
vibrant/src/renderer/line/occlusion/: mod.rs
vibrant/src/renderer/line/occlusion/ambient/: ambient.wgsl  mod.rs
vibrant/src/renderer/line/occlusion/directional/: directional.wgsl  mod.rs
vibrant/src/renderer/line/occupancy/: copy.wgsl  mipmap.wgsl  mod.rs  voxelize.wgsl
vibrant/src/renderer/line/render/: mod.rs
vibrant/src/renderer/line/render/raytracing/: mod.rs  opaque.wgsl  transparent.wgsl
vibrant/src/renderer/line/render/volume/: mod.rs  volume.wgsl
vibrant/src/renderer/line/segment/: mod.rs  segment.wgsl
vibrant/src/renderer/line/transform/: adjacency.wgsl  mod.rs  transform.wgsl
vibrant/src/renderer/line/ui/: mod.rs  ui.wgsl
vibrant/src/renderer/wgsl/: common.wgsl  mod.rs  trace.wgsl
vibrant/src/renderer/wgsl/voxelize/: box.wgsl  line.wgsl  mod.rs  tube.wgsl
vibrant/src/surface/: color.rs  culling.rs  mod.rs  occlusion.rs  occupancy.rs
(+4 files in other folders)
