[workspace]
members = ["vibrant"]

[package]
name = "vibrant-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace.dependencies]
wgpu = "27.0.1"
winit = "0.30.12"

egui = { git = "https://github.com/emilk/egui.git" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", features = ["winit"] }
egui-winit = { git = "https://github.com/emilk/egui.git", default-features = false }
log = "0.4.28"
pollster = "0.3"

[dependencies]
vibrant = { path = "vibrant" }

wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
log.workspace = true
pollster.workspace = true

web-time = "1.1"
env_logger = "0.11"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
] }
