[package]
name = "vibrant"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
log.workspace = true
pollster.workspace = true

bytemuck = { version = "1.18", features = ["derive", "min_const_generics"] }
glam = { version = "0.29", features = ["bytemuck"] }
rfd = "0.15"
png = "0.17"
futures = "0.3"
itertools = "0.13"
integer-sqrt = "0.1"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
